# sol-itaire

./: .env.example  .gitignore  .vercelignore  Anchor.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVNET_USER_GUIDE.md  README.md  SIMPLIFIED_DEVNET_SETUP.md  TOKEN_DEPLOYMENT_GUIDE.md  TOKEN_DEPLOYMENT_SUCCESS.md  TOKEN_ECONOMICS_GUIDE.md  TOKEN_PURCHASE_GUIDE.md  WALLET_SETUP_GUIDE.md  gaming-token-keypair.json  memecoin-keypair.json  package.json  pnpm-workspace.yaml  tsconfig.json  vercel.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci-cd.yml  deploy.yml  preview-deployment.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1762212181990-elza20bjt.txt
apps/backend/: .dockerignore  .env.example  Dockerfile  package.json  render.yaml  tsconfig.json
apps/web/: .env.local.example  .env.production.example  (+4 more)
backend/: .env.example  README.md  package.json  render.yaml
programs/memecoin/: Cargo.toml
programs/memecoin/src/: lib.rs
programs/solitaire/: Cargo.toml
programs/solitaire/src/: lib.rs
scripts/: deploy-mainnet-tokens.sh  deploy-tokens.sh  deploy.sh  simple-deploy.sh
sol_itaire/: README.md  agentstack.json  pyproject.toml
solana-release/: .crates2.json  version.yml
testing/: README.md  comprehensive-qa-protocols.md  end-to-end-testing-scenarios.md  frontend-web3-testing-strategy.md  game-logic-validation-tests.md  security-testing-protocols.md  smart-contracts-testing-strategy.md
tests/: token-initialization.ts
(+53 files in other folders)
