[package]
name = "memecoin"
version = "0.1.0"
description = "Memecoin for Sol-itaire rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memecoin"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"
borsh = "0.10.3"
thiserror = "1.0.48"